--- a/CSS/footer.css
+++ b/CSS/footer.css
@@ -1,6 +1,6 @@
 /*footer css*/
 .footer__container{
-  background-color: #141414;
+  background-color: #1b1a1a;
   padding: 2rem 0;
   display: flex;
   flex-direction: column;
@@ -72,7 +72,6 @@
 @media screen and (max-width: 820px){
   #footer__logo{
     margin-bottom: 2rem;
-    padding-right: 25px;
   }
 
   .website__right{
@@ -82,6 +81,7 @@
   .social__media--wrap{
     flex-direction: column;
   }
+
 }
 
 /* @media screen and (max-witdh: 480px){
