--- a/CSS/main.css
+++ b/CSS/main.css
@@ -7,29 +7,15 @@
 
 /* Scrollbar */
  ::-webkit-scrollbar {
-  background: #141414;
+  background: #282828;
   backdrop-filter: blur(10px);
   width: 0px;
   height: 0px;
 } /* Made it no show */
 
-/* ::-webkit-scrollbar-track {
-  background: #141414;
-  backdrop-filter: blur(10px);
-}
-
-::-webkit-scrollbar-thumb {
-border-radius: 10px;
-background: #141414;
-}
-
-::-webkit-scrollbar-thumb:hover {
-background: #606060;
-} */
-
 /* Navbar Section */
 .navbar {
-  background-color: #141414;
+  background-color: #1b1a1a;
   height: 80px;
   display: flex;
   justify-content: center;
@@ -52,8 +38,7 @@ background: #606060;
 }
 
 #navbar__logo {
-  background-color: #ff8177;
-  background-image: linear-gradient(to top, #fff 0%, #606060 100%);
+  background-image: linear-gradient(to top, #fff 0%, #288a56 100%);
   background-size: 100%;
   -webkit-background-clip: text;
   -moz-background-clip: text;
@@ -77,19 +62,25 @@ background: #606060;
   height: 80px;
 }
 .navbar__item:hover{
-  transform: scale(1.055);
-  transition: 0.35s ease-in;
+  transform: scale(1.075);
+  transition: 0.15s ease-in;
   cursor: pointer;
 }
 
 .navbar__links {
-  color: #BDBDBD;
+  color: #fff;
   display: flex;
   align-items: center;
   justify-content: center;
   text-decoration: none;
   padding: 0 1rem;
   height: 100%;
+}
+
+/*button Resume over*/
+.navbar__links:hover {
+  color: #A8E2C3;
+  transition: all 0.3s ease;
 }
 
 .navbar__btn {
@@ -104,8 +95,8 @@ background: #606060;
 .button {
   display: flex;
   background: #833ab4;
-  background-image: -webkit-linear-gradient(to top, #BDBDBD 0%, #141414 100%);
-  background-image: linear-gradient(to top, #808080 0%, #141414 100%);
+  background-image: -webkit-linear-gradient(to top, #BCB8AF 0%, #282828 100%);
+  background-image: linear-gradient(to top, #282828 0%, #9a8478 100%);
   justify-content: center;
   align-items: center;
   text-decoration: none;
@@ -120,14 +111,8 @@ background: #606060;
 }
 
 .button:hover {
-  background-image: linear-gradient(to top, #808080 0%, #304352 100%);
+  background-image: linear-gradient(to top, #2e1e14 0%, #9a8478 100%);
   transition: all 0.4s ease;
-}
-
-/*button Resume over*/
-.navbar__links:hover {
-  color: #3d72b4;
-  transition: all 0.3s ease;
 }
 
 @media screen and (max-width: 960px) {
@@ -228,7 +213,7 @@ background: #606060;
 /* Hero section */
 .hero {
   background: #000000;
-  background: linear-gradient(to right, #304352, #d7d2cc);
+  background: linear-gradient(to bottom right, #1e130c, #BCB8AF);
   padding: 15rem 0;
 }
 
@@ -248,21 +233,33 @@ background: #606060;
   font-size: 100px;
   margin-bottom: 24px;
   color: #fff;
+  transition: 3s;
 }
 
-.hero__discription {
+.hero__heading:hover {
+  letter-spacing: 20px;
+}
+
+.hero__description {
   font-size: 60px;
-  background: #da22ff;
   /* background: -webkit-linear-gradient(to right, #9114ff 0%, #da22ff 100%); */
-  background: linear-gradient(to right, #414345 0%, #232526 100%);
+  /* background: linear-gradient(to top, #6f4c30 0%, #1a1a1a 60%, #141414 100%); */
+  background: linear-gradient(to right, #1c1d1d 0%, #000000 100%);
   -webkit-background-clip: text;
   -moz-background-clip: text;
   -webkit-text-fill-color: transparent;
   -mo-text-fill-color: transparent;
 }
 
-.highlight {
-  border-bottom: 4px solid rgb(132, 0, 255);
+.hero__description p span.cursor {
+  display: inline-block;
+  margin-left: 0.1rem;
+  width: 3px;
+  animation: blink 1s infinite;
+}
+
+.hero__description p span.cursor.typing {
+  animation: none;
 }
 
 @media screen and (max-width: 768px) {
