--- a/CSS/projects.css
+++ b/CSS/projects.css
@@ -1,7 +1,7 @@
 /* projects section */
 .projects {
   background: #000000;
-  background: linear-gradient(to bottom right, #BCB8AF, #1e130c);
+  background: linear-gradient(to bottom right, #68585a, #848c85);
   padding: 8rem 0;
   display: flex;
   flex-direction: column;
@@ -13,7 +13,7 @@
   /* background-color: #ff8177;
   background: #da22ff; */
   background: -webkit-linear-gradient(to right, #9114ff 0%, #9a9a9a 100%);
-  background: linear-gradient(to right, #414345 0%, #000000 100%);
+  background: linear-gradient(to bottom, #b5363c 0%, #1c1d1d 100%);
   background-size: 100%;
   -webkit-background-clip: text;
   -moz-background-clip: text;
@@ -69,14 +69,14 @@
   height: 15px;
   width: 15px;
   margin: 0 2px;
-  background-color: #b8b8b8;
+  background-color: #d0c7b6;
   border-radius: 50%;
   display: inline-block;
   transition: background-color 0.6s ease;
 }
 
 .active, .dot:hover {
-  background-color: #141414;
+  background-color: #0c0c15;
 }
 
 .projects__container {
@@ -93,13 +93,13 @@
 }
 
 .projects__content {
-  color: #fff;
+  color: #d0c7b6;
   width: 100%; /*50% for grid effect*/
 }
 
 .projects__img3{
   margin: 2rem 2rem;
-  color: #fff;
+  color: #d0c7b6;
   width: 50%;
 }
 
@@ -108,7 +108,7 @@
   /* font-size: 50px; */
   /* background: #da22ff; */
   /* background: -webkit-linear-gradient(to right, #085078 0%, #085078 100%); */
-  background: #141414;
+  background: #0c0c15;
   -webkit-background-clip: text;
   -moz-background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -137,15 +137,15 @@
   color: #000000;
   font-weight: bold;
   flex-direction: row;
-  background-image: linear-gradient(to top left , #111111 0%, #fff 150%);
+  background-image: linear-gradient(to top left , #39443f 0%, #84848c 150%);
   border-radius: .8rem;
   text-decoration: none;
   transition: all 0.10s ease;
 }
 
 .button__cta:hover {
-  background-image: linear-gradient(to bottom left, #9a8478 0%, #000000 100%);
-  color: #DBDAB6;
+  background-image: linear-gradient(to bottom left, #b5363c 0%, #0c0c15 100%);
+  color: #d0c7b6;
   transition: all 0.15s ease;
   transform: scale(1.075);
 }
@@ -172,15 +172,15 @@
 }
 
 #first{
-  background-image: linear-gradient(to top, #111111 0%, #82b198 100%);
+  background-image: linear-gradient(to top, #111111 0%,#68585a 100%);
 }
 
 #second{
-  background-image: linear-gradient(to top, #111111 0%, #DBDAB6 100%);
+  background-image: linear-gradient(to top, #111111 0%, #84848c 100%);
 }
 
 #third{
-  background-image: linear-gradient(to top, #111111 0%, #BCB8AF 100%);
+  background-image: linear-gradient(to top, #111111 0%, #848c85 100%);
 }
 
 /* Media Responsive */
